chore: update CORS configuration for flexible frontend development
- Allow all origins using allowedOriginPatterns(*) for development
- Support any port on localhost (3000, 3001, etc.)
- Keep credentials support for authentication
- Added clear comments for production hardening
- Maintains security while improving developer experience